# llm-wearable-agentic-eval-pipeline

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.md  dvc.yaml  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.dvc/: config
.github/workflows/: eval_gate.yml
apps/playground/: README.md  app.py
configs/: benchmark_tasks.yaml  default.yaml  toy_annotation_data.json
configs/argilla/: argilla_setup.py  docker-compose.yml
data/ab_experiment/: ab_results.json  curated_trajectories.json  raw_trajectories.json
data/annotations/: README.md  agenteval-schema-v1.json  calibration_round_01.json  day12_annotations.jsonl  pia_results.json  prm_annotations_20.jsonl  prm_summary_stats.json  wearable_annotation_rubric.md
data/benchmark/: benchmark_descriptor.json
data/processed/: day10_findings.md  day19_smoke_test_results.jsonl  hh_rlhf_disagreement_matrix.csv  hh_rlhf_irr_results.json
data/raw/: synthetic_wearable_logs.jsonl.dvc
demo/: README.md  app.py  pipeline.py  requirements.txt
docs/: calibration_playbook.md  pia_methodology.md
notebooks/: agentic_eval_flywheel.html  agentic_eval_flywheel.ipynb  agentic_eval_flywheel_executed.ipynb  curation_pipeline_e2e.ipynb  curation_pipeline_e2e_executed.ipynb
reports/: wp2_leaderboard.md
results/: facts_kaggle_submission.csv  irr_day09_toy.json
scripts/: check_eval_gate.py  generate_leaderboard_report.py  kaggle_facts_submission.py  run_day17_detection.py  run_day19_eval_smoke_test.py  run_trajectory_pipeline.py
src/eval/: __init__.py  (+10 more)
tests/: test_agentic_eval.py  test_demo_pipeline.py  test_irr_calculator.py  test_wearable_generator.py
white_papers/: linkedin_post4_wp1_announcement.md  wp1_data_curation.md  wp1_medium_version.md  wp2_agentic_eval.md  wp2_medium_version.md  wp3_ambient_ai_eval.md  wp3_medium_version.md  wp3_wearable_privacy.md
(+57 files in other folders)
