[project]
name = "llm-wearable-agentic-eval-pipeline"
version = "0.1.0"
description = "End-to-end pipeline for curating, annotating, and evaluating agentic AI systems focused on wearable/ambient AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM provider SDKs
    "anthropic>=0.49.0",
    "openai>=1.70.0",
    # Agent frameworks
    "langgraph>=0.3.0",
    "crewai>=0.105.0",
    "ag2>=0.9.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",
    # Data / numerics
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    # ML / evaluation
    "scikit-learn>=1.6.0",
    "bert-score>=0.3.13",
    "cleanlab>=2.7.0",
    "krippendorff>=0.6.1",
    # Deduplication
    "datasketch>=1.6.5",
    # Visualization
    "matplotlib>=3.9.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    # Config
    "pyyaml>=6.0.2",
    "openai-agents>=0.4.2",
    "deepeval>=3.9.6",
    "ragas>=0.4.3",
    "datasets>=4.8.4",
    "sentence-transformers>=5.4.0",
    "seaborn>=0.13.2",
    "loguru>=0.7.3",
    "jupyter>=1.1.1",
    "argilla==2.8.0",
    "dvc>=3.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "jupyterlab>=4.3.0",
    "ipykernel>=6.29.0",
    "types-pyyaml>=6.0.12",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
